# ustadh

./: .gitignore  .pre-commit-config.yaml  Makefile  PITCH.md  README.md  claude_context.sh  claude_context.txt  db_context.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/dependencies/: __init__.py
backend/src/api/endpoints/: __init__.py  admin.py  auth.py  community.py  course_generator.py  files.py  learning.py  messaging.py  notes.py  professor_ai.py  professor_analytics.py  professor_assignments.py  professor_insights.py  professor_school.py  professors.py  progress.py  recommendations.py  schedule.py  school-onboarding.py  school_onboarding.py  schools.py  students.py  subjects.py  tutoring.py  users.py  whiteboard.py
backend/src/api/models/: __init__.py  assignment.py  auth.py  content.py  file.py  professor.py  professor_analytics.py  professor_student_analytics.py  progress.py  recommendation.py  school.py  tutoring.py  user.py
backend/src/core/: llm.py  security.py  settings.py
backend/src/core/ai/: analytics_engine.py
backend/src/db/: __init__.py  postgresql.py  qdrant.py
backend/src/db/models/: __init__.py  communication.py  community.py  content.py  course_generation.py  flashcard.py  notes.py  professor.py  progress.py  (+6 more)
backend/src/services/: note_ai_service.py  whiteboard_ai_service.py
backend/src/utils/: __init__.py  date_utils.py  progress_helpers.py
backend/src/worker/: celery_app.py
backend/tests/: conftest.py  test_main.py
backend/tests/unit/: conftest.py  test_auth.py  test_user.py
(+201 files in other folders)
